# tsgql

./: .gitignore  .gitmodules  Cargo.toml  README.md  ast.txt  build.rs  index.js  package.json  schema.graphql  todo.md  tsconfig.json  tsgql.config.js
.cargo/: config.toml
.github/workflows/: CI.yml
__test__/: index.spec.ts
examples/basic/: generated.graphql  package.json  schema.ts  tql.config.js  tsconfig.json
examples/basic/src/: schema.ts  types.ts
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: codegen.rs  lib.rs  main.rs  node.rs
testing/: cleaned.ts  esbuild.js  package-lock.json  package.json  tsconfig.json
testing/src/: index.ts  input.ts  lib.ts
type-reduce/: cleaned.ts  esbuild.js  jest.config.js  package.json  tsconfig.json
type-reduce/src/: index.ts  input.ts  lib.ts  types.ts
type-reduce/src/__tests__/: reduce.test.ts
type-reduce/test/: index.js
