[package]
name = "typefirstql"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
once_cell = "1.8.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
swc = "0.71.0"
swc_common = "0.13.5"
swc_ecmascript = "0.77.0"
apollo-encoder = { path = "./apollo-rs/crates/apollo-encoder" }
indoc = "1.0.3"
