[package]
name = "tsgql"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["node"]
node = ["napi", "napi-derive", "napi-build"]

[dependencies]
napi = { version = "1", optional = true, features=["serde-json"] }
napi-derive = { version = "1", optional = true }
anyhow = "1.0.44"
once_cell = "1.8.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
swc = "0.71.0"
swc_common = "0.13.5"
swc_ecmascript = "0.77.0"
apollo-encoder = { path = "./apollo-rs/crates/apollo-encoder" }
indoc = "1.0.3"

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = { version = "1", optional = true }

[profile.release]
lto = true